--- a/frontend/csyllabus/src/app/core/explorer/search/explorer.component.html
+++ b/frontend/csyllabus/src/app/core/explorer/search/explorer.component.html
@@ -15,15 +15,13 @@
           </mat-chip-list>
         </mat-form-field>
         <br/>
-        <mat-form-field class="selector">
-            <mat-select placeholder="English Level">
-              <mat-option *ngFor="let level of levels" [value]="level.value">
-                {{level.viewValue}}
-              </mat-option>
-            </mat-select>
-          </mat-form-field>
-          <br/>
-          <mat-form-field class="selector">
+
+
+          <mat-radio-group [(ngModel)]="queryLevel">
+            <mat-radio-button class="check" value="undergraduate" [checked]="true">Undergraduate</mat-radio-button>
+            <mat-radio-button class="check" value="graduate">Graduate</mat-radio-button>
+          </mat-radio-group>
+      <mat-form-field class="selector">
             <mat-select placeholder="Semester">
               <mat-option *ngFor="let sem of semesters" [value]="sem.value">
                 {{sem.viewValue}}
@@ -31,10 +29,6 @@
             </mat-select>
           </mat-form-field>
           <br/>
-          <mat-radio-group [(ngModel)]="queryLevel">
-            <mat-radio-button class="check" value="undergraduate" [checked]="true">Undergraduate</mat-radio-button>
-            <mat-radio-button class="check" value="graduate">Graduate</mat-radio-button>
-          </mat-radio-group>
       </div>
   <div class="column">
      <mat-form-field class="input">
@@ -79,7 +73,7 @@
     </div>
 </div>
 <div class="button">
-  <button mat-raised-button color="primary" margin=10px>Go</button>
+  <button mat-raised-button color="primary" margin=10px>Search</button>
 </div>
 
 
