--- a/frontend/csyllabus/src/app/components/course/course.component.css
+++ b/frontend/csyllabus/src/app/components/course/course.component.css
@@ -1,42 +1,44 @@
 .container {
-    margin-top: 1.5%;
-    align-self: center;
-    background: white;
-    width: 97%;
-    max-width: 97%;
-    margin-bottom: 1.5%;
-    border-radius: 5px;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-    transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
-    background-color: rgba(255, 255, 255, 0.85);
-    position: relative;
--webkit-box-shadow: 0px 0px 16px -5px rgba(0,0,0,0.75);
-   -moz-box-shadow: 0px 0px 16px -5px rgba(0,0,0,0.75);
-    -box-shadow: 0px 0px 16px -5px rgba(0,0,0,0.75);
-  }
-.title{
-    font-family: 'Roboto', sans-serif;
-    font-size: 180%;
-    font-weight: bold;
-    border-radius: 5px;
-    color: white;
-    background-color: rgba(56, 65, 143, 0.85); 
-}
-.subtitle{
-    font-family: 'Roboto', sans-serif;
-
-    font-size: 110%;
-    font-weight: bold;
-    border-radius: 5px;
-    padding: 5px;
-    color: white;
-    background-color: rgba(11, 14, 33, 0.85); 
-    text-align: center;
+  margin-top: 1.5%;
+  align-self: center;
+  background: white;
+  width: 97%;
+  max-width: 97%;
+  margin-bottom: 1.5%;
+  border-radius: 5px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
+  background-color: rgba(255, 255, 255, 0.85);
+  position: relative;
+  -webkit-box-shadow: 0px 0px 16px -5px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 0px 16px -5px rgba(0, 0, 0, 0.75);
+  -box-shadow: 0px 0px 16px -5px rgba(0, 0, 0, 0.75);
 }
 
-@media only screen and (min-width: 900px){
-.description{
-    text-align : justify;
+.title {
+  font-family: 'Roboto', sans-serif;
+  font-size: 180%;
+  font-weight: bold;
+  border-radius: 5px;
+  color: white;
+  background-color: rgba(56, 65, 143, 0.85);
+}
+
+.subtitle {
+  font-family: 'Roboto', sans-serif;
+
+  font-size: 110%;
+  font-weight: bold;
+  border-radius: 5px;
+  padding: 5px;
+  color: white;
+  background-color: rgba(11, 14, 33, 0.85);
+  text-align: center;
+}
+
+@media only screen and (min-width: 900px) {
+  .description {
+    text-align: justify;
     float: left;
     width: 75%;
     margin: 2%;
@@ -44,11 +46,13 @@
     border-radius: 5px;
     align-self: center;
     background: white;
-}
-h3{
-	text-align:left;
-}
-.details{
+  }
+
+  h3 {
+    text-align: left;
+  }
+
+  .details {
     width: 19%;
     float: left;
     margin: 2%;
@@ -56,40 +60,45 @@ h3{
     border-radius: 5px;
     align-self: center;
     background: white;
+  }
 }
-}
-@media only screen and (min-width: 900px){
-.description{
-    text-align : justify;
+
+@media only screen and (min-width: 900px) {
+  .description {
+    text-align: justify;
 
     margin: 2%;
     border-radius: 5px;
     align-self: center;
     background: white;
     padding-bottom: 10px;
-}
-.details{
+  }
+
+  .details {
     margin: 2%;
-    text-align : center;
+    text-align: center;
     padding-bottom: 10px;
 
     border-radius: 5px;
     align-self: center;
     background: white;
     float: center;
-}
-/*
-.social{
-    width: 49%;
-    float: left;
-    margin-left: 1%;
-}
-*/
-.columns{
-    background-color:rgba(242, 242, 242, 0.809);
-}
-.columns:after{
+  }
+
+  /*
+  .social{
+      width: 49%;
+      float: left;
+      margin-left: 1%;
+  }
+  */
+  .columns {
+    background-color: rgba(242, 242, 242, 0.809);
+  }
+
+  .columns:after {
     content: "";
     display: table;
     clear: both;
+  }
 }
