--- a/frontend/csyllabus/src/app/core/comparator/comparator.component.html
+++ b/frontend/csyllabus/src/app/core/comparator/comparator.component.html
@@ -43,16 +43,32 @@
         <mat-radio-button style="padding-left:20px" value="A" default>Any</mat-radio-button>
       </mat-radio-group>-->
 
-      <mat-form-field class="input" *ngIf="queryHomeProgram">
-        <input placeholder="Course?" matInput [formControl]="homeCoursesControl"
-               [matAutocomplete]="home_courses_auto" [(ngModel)]="queryHomeCourse"
-               required>
-        <mat-autocomplete #home_courses_auto="matAutocomplete" [displayWith]="displaySelect">
-          <mat-option *ngFor="let course of filteredHomeCourses" [value]="course">
-            {{ course.name }}
-          </mat-option>
-        </mat-autocomplete>
-      </mat-form-field>
+      <div *ngFor="let num of [1,2,3,4,5]">
+        <mat-form-field class="input" style="width:80%; float:right"  *ngIf="queryHomeProgram">
+          <input  placeholder="Course {{num}}?" matInput [formControl]="homeCoursesControl"
+                 [matAutocomplete]="home_courses_auto" [(ngModel)]="listCourses[num-1]"
+                 required>
+          <mat-autocomplete #home_courses_auto="matAutocomplete" [displayWith]="displaySelect">
+            <mat-option *ngFor="let course of filteredHomeCourses" [value]="course">
+              {{ course.name }}
+            </mat-option>
+          </mat-autocomplete>
+        </mat-form-field>
+      </div>
+
+      <!--<div *ngIf="queryHomeProgram" [formGroup]="orderForm">
+        <mat-form-field class="input" style="width:80%; float:right">
+          <input  placeholder="Course {{iteration_of_course+1}}?" matInput [formControl]="homeCoursesControl"
+                 [matAutocomplete]="home_courses_auto" [(ngModel)]="listCourses[iteration_of_course]"
+                 required>
+          <mat-autocomplete #home_courses_auto="matAutocomplete" [displayWith]="displaySelect">
+            <mat-option *ngFor="let course of filteredHomeCourses" [value]="course">
+              {{ course.name }}
+            </mat-option>
+          </mat-autocomplete>
+        </mat-form-field>
+        <button (click)="addNewCourse()">Add</button>
+      </div>-->
 
 
     </div>
